<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="kwondeveloper.com.mikekwonespressolab.MainActivity">

    <TextView
        android:id="@+id/currentBalanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />
    <EditText
        android:id="@+id/transactionValueEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Amount"/>
    <Button
        android:id="@+id/addValueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deposit"/>
    <Button
        android:id="@+id/reduceValueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Withdraw"/>
    <Button
        android:id="@+id/checkNameAddressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check Name/Address"/>
    <ListView
        android:id="@+id/transactionsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
